[package]
  name = "chirpstack-pulsar-integration"
  description = "Apache Pulsar integration for ChirpStack"
  repository = "https://github.com/chirpstack/chirpstack-pulsar-integration"
  homepage = "https://www.chirpstack.io/"
  version = "4.0.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  publish = false
  license = "MIT"

[dependencies]
  clap = { version = "4.4", features = ["derive"] }
  pulsar = { version = "6.0" }
  redis = { version = "0.23", features = [
    "cluster-async",
    "tokio-native-tls-comp",
  ] }
  anyhow = "1.0"
  tracing = "0.1"
  tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "ansi",
    "json",
  ], default-features = true }
  async-trait = "0.1.73"
  chirpstack_api = "4.5"
  serde = { version = "1.0", features = ["derive"] }
  tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
  handlebars = "4.4"
  prost = "0.12"
  lazy_static = "1.4"
  serde_json = "1.0"
  toml = "0.7"

[dev-dependencies]
  regex = "1.9"
  futures = "0.3"
