[package]
  name = "chirpstack-pulsar-integration"
  description = "Apache Pulsar integration for ChirpStack"
  repository = "https://github.com/chirpstack/chirpstack-pulsar-integration"
  homepage = "https://www.chirpstack.io/"
  version = "4.0.0-test.2"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  publish = false
  license = "MIT"

[dependencies]
  clap = { version = "4.4", features = ["derive"] }
  pulsar = { version = "6.0" }
  redis = { version = "0.23", features = [
    "cluster-async",
    "tokio-native-tls-comp",
  ] }
  anyhow = "1.0"
  tracing = "0.1"
  tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "ansi",
    "json",
  ], default-features = true }
  async-trait = "0.1.73"
  chirpstack_api = "4.5"
  serde = { version = "1.0", features = ["derive"] }
  tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
  handlebars = "4.4"
  prost = "0.11"
  lazy_static = "1.4"
  serde_json = "1.0"
  toml = "0.7"

[dev-dependencies]
  regex = "1.9"
  futures = "0.3"

# Debian packaging.
[package.metadata.deb]
  assets = [
    [
      "target/release/chirpstack-pulsar-integration",
      "usr/bin/",
      "755",
    ],
    [
      "configuration/chirpstack-pulsar-integration.toml",
      "etc/chirpstack-pulsar-integration/",
      "640",
    ],
  ]

  conf-files = [
    "/etc/chirpstack-pulsar-integration/chirpstack-pulsar-integration.toml",
  ]
  suggests = "chirpstack, redis"
  maintainer-scripts = "debian/"
  systemd-units = { enable = true }

# RPM packaging.
[package.metadata.generate-rpm]
  auto-req = "no"

  pre_install_script = '''
id chirpstack &>/dev/null
if [[ $? -ne 0 ]]; then
	useradd --system -U -M chirpstack -s /bin/false -d /etc/chirpstack
fi
'''

  post_install_script = '''
chown -R chirpstack:chirpstack /etc/chirpstack-pulsar-integration
chmod 750 /etc/chirpstack-pulsar-integration
chmod 640 /etc/chirpstack-pulsar-integration/chirpstack-pulsar-integration.toml
'''

  assets = [
    { source = "target/release/chirpstack-pulsar-integration", dest = "/usr/bin/chirpstack-pulsar-integration", mode = "755" },
    { source = "configuration/chirpstack-pulsar-integration.toml", dest = "/etc/chirpstack-pulsar-integration/chirpstack-pulsar-integration.toml" },
    { source = "rpm/chirpstack-pulsar-integration.service", dest = "/lib/systemd/system/chirpstack-pulsar-integration.service" },
  ]
